Mon Sep 20 15:31:21 CEST 2004 (tk)
----------------------------------
  V 0.80rc

Mon Sep 20 13:46:15 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix parsing problem
  * clamav-milter:	Up issue

Mon Sep 20 12:12:09 CEST 2004 (tk)
----------------------------------
  * libclamav/scanners.c: remove temporary files in the event of cli_mbox
			  failure (thanks to Nigel)

Mon Sep 20 10:44:35 BST 2004 (trog)
-----------------------------------
  * libclamav/htmlnorm.c: Simplify handling of NL chars, treat as a space.

Mon Sep 20 10:09:55 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Change to clamd.conf
  			Remove StreamSaveToDisk check

Mon Sep 20 09:32:05 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	FOLLOWURLS is now compiled by default if libcurl
  				is found

Mon Sep 20 01:44:47 CEST 2004 (tk)
----------------------------------
  * docs: update

Sun Sep 19 22:55:34 CEST 2004 (tk)
----------------------------------
  * include new test file from aCaB (a fully working 544 bytes long MZ+PE!)

Sun Sep 19 21:19:51 CEST 2004 (tk)
----------------------------------
  * docs/MacOSX: update (thanks to Dale Enterprise L.L.C)
  * libclamav: minor cleanup

Sun Sep 19 02:06:06 CEST 2004 (tk)
----------------------------------
  * etc/clamav.conf: rename clamd.conf
  * freshclam,sigtool: minor cleanup

Sat Sep 18 21:23:00 CEST 2004 (tk)
----------------------------------
  * clamd: remove obsolete StreamSaveToDisk directive
  * sigtool: add --html-normalise
  * cleanup

Sat Sep 18 16:02:32 BST 2004 (njh)
----------------------------------
  * libclamav:	Some minor code tidies

Sat Sep 18 16:26:53 CEST 2004 (tk)
----------------------------------
  * docs: remove outdated docs

Sat Sep 18 02:09:52 CEST 2004 (tk)
----------------------------------
  * libclamav/scanners.c: honour return code of cli_mbox

Sat Sep 18 01:13:21 CEST 2004 (tk)
----------------------------------